atualizando versao html e css

--- a/index.html
+++ b/index.html
@@ -177,7 +177,27 @@
             </div>
         </section>
 
+        <section class="template-6">
+            <div class="template-6-half-2">
+                <h6>Download our App now !</h6>
+                <span>
+                    The rise of mobile devices transThe rise of
+                    mobile devices trans The rise of mobile devices trans
+                    mobile devices trans The rise of mobile devices trans.
+                </span>
+                <div class="dowload-icon">
+                    <img src="icon/icon-google-play.png" alt="" />
+                    <img src="icon/icon-app-store.png" alt="" />
+                </div>
+                <img class="image-rigth" src="icon/icon-rigth-location.png" alt="" />
+            </div>
+        </section>
+
     </main>
+
+    <footer>
+
+    </footer>
 
 </body>
 
