--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template</title>
+    <title>AppLab</title>
     <link rel="stylesheet" href="normalize.css" type="text/css" />
     <link rel="stylesheet" href="main.css" type="text/css" />
 </head>
@@ -192,11 +192,37 @@
                 <img class="image-rigth" src="icon/icon-rigth-location.png" alt="" />
             </div>
         </section>
-
     </main>
 
-    <footer>
-
+    <footer class="footer">
+        <div class="footer-content">
+            <div>
+                <span class="app">
+                    App
+                </span>
+                <span class="lab">
+                    Lab
+                </span>
+            </div>
+            <ul>
+                <li>Home</li>
+                <li>Key Features</li>
+                <li>Pricing</li>
+                <li>Testimonial</li>
+                <li>FAQ</li>
+            </ul>
+            <ul class="icons">
+                <li>
+                    <img src="icon/icon-instagram.png" alt="">
+                </li>
+                <li>
+                    <img src="icon/icon-facebook.png" alt="">
+                </li>
+                <li>
+                    <img src="icon/icon-github.png" alt="">
+                </li>
+            </ul>
+        </div>
     </footer>
 
 </body>
